--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -60,7 +60,7 @@
       "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs. ![](WBBiB_Winter_School_2022_slide2.jpg)\r\n",
       "Could E93 play the adult specifier role in the embryo? \tTalk\tice2022\tInternational Congress of Entomology 2022.\t2022-07-20\tHelsinki, Finland\thttps://ice2020helsinki.fi/\t\r\n",
       "Comparative genomics of insects to unveil the evolution of gene regulatory networks.\tTalk\tBibtorun2022\tBioinformatics in Torun conference by the Polish Bioinformatics Society  2022.\t24/06/2022\tTorun, Poland\thttps://www.ptbi.org.pl/website/conferences/bit22/\t\r\n",
-      "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t\r\n"
+      "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t[Photo4](IMG_0161.JPEG)\r\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -173,7 +173,7 @@
        "      <td>30/06/2022</td>\n",
        "      <td>Krakow, Pland</td>\n",
        "      <td>https://kongresgenetyki2022.jordan.pl/</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>[Photo4](IMG_0161.JPEG)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -213,10 +213,10 @@
        "1  Guillem Ylla gave a talk in the workshop title...  \n",
        "2                                                NaN  \n",
        "3                                                NaN  \n",
-       "4                                                NaN  "
+       "4                            [Photo4](IMG_0161.JPEG)  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -346,7 +346,8 @@
       "2022-02-22-winterschool22.md  JW210926_360.jpg\r\n",
       "2022-07-20-ice2022.md\t      JW210926_363.jpg\r\n",
       "2022-Bibtorun2022.md\t      WBBiB_Winter_School_2022_slide2.jpg\r\n",
-      "2022-PCG2022.md\t\t      YllaLab_Talks.tsv\r\n"
+      "2022-PCG2022.md\t\t      YllaLab_Talks.tsv\r\n",
+      "IMG_0161.JPEG\r\n"
      ]
     }
    ],
