--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,8 @@
       "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
       "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
       "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
-      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
+      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n",
+      "SUCESSFULLY PARSED Fernandez-Nicolas2022: \" {Reduction of embryonic E93 expression as a key factor for t ... \"\n"
      ]
     }
    ],
@@ -149,6 +150,8 @@
     "            ################\n",
     "            ## Make Ylla lab people bold and replace bad characters\n",
     "            citation=str(citation).replace(\"Guillem Ylla\", \"<b>Guillem Ylla</b>\")\n",
+    "            citation=str(citation).replace(\"Gabriela Machaj\", \"<b>Gabriela Machaj</b>\")\n",
+    "\n",
     "            ## fix accents\n",
     "            citation=html_escape(citation).replace('{\\&apos;{e}}', 'e').replace('{\\~{n}}', 'n').replace('{\\&apos;{o}}s', 'o')\n",
     "\n",
@@ -217,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  <b>Guillem Ylla</b>,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \"Hemimetabolous genomes reveal molecular basis of termite eusociality.\" <em>Nature Ecology and Evolution</em>, 2018.'"
+       "' Ana Fernandez-Nicolas,  Gabriela Machaj,  Alba Ventos-Alfonso,  Viviana Pagone,  Toshinori Minemura,  Takahiro Ohde,  Takaaki Daimon,  <b>Guillem Ylla</b>,  Xavier Belles, \"Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis.\" <em>bioRxiv</em>, 2022.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
