--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Ana Fernandez-Nicolas,  Gabriela Machaj,  Alba Ventos-Alfonso,  Viviana Pagone,  Toshinori Minemura,  Takahiro Ohde,  Takaaki Daimon,  <b>Guillem Ylla</b>,  Xavier Belles, \"Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis.\" <em>bioRxiv</em>, 2022.'"
+       "' Ana Fernandez-Nicolas,  <b>Gabriela Machaj</b>,  Alba Ventos-Alfonso,  Viviana Pagone,  Toshinori Minemura,  Takahiro Ohde,  Takaaki Daimon,  <b>Guillem Ylla</b>,  Xavier Belles, \"Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis.\" <em>bioRxiv</em>, 2022.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
