--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -271,7 +271,7 @@ month = {oct},
 pages = {2022.10.04.510826},
 publisher = {Cold Spring Harbor Laboratory},
 title = {{Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis}},
-url = {https://www.biorxiv.org/content/10.1101/2022.10.04.510826v1 https://www.biorxiv.org/content/10.1101/2022.10.04.510826v1.abstract},
+url = {https://www.biorxiv.org/content/10.1101/2022.10.04.510826v1},
 year = {2022}
 }
 
