--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -1,3 +1,19 @@
+@article{Fernandez-Nicolas2023,
+abstract = {SignificanceInsect metamorphosis is classified into hemimetaboly and holometaboly, which derives from the former. Hemimetabolan nymphs are similar to the adult, whereas in holometabolans embryogene...},
+author = {Fernandez-Nicolas, Ana and Machaj, Gabriela and Ventos-Alfonso, Alba and Pagone, Viviana and Minemura, Toshinori and Ohde, Takahiro and Daimon, Takaaki and Ylla, Guillem and Belles, Xavier},
+doi = {10.1073/PNAS.2216640120},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences},
+keywords = {E93,complex life cycles,embryogenesis,insect metamorphosis},
+month = {feb},
+number = {7},
+pages = {e2216640120},
+publisher = {National Academy of Sciences},
+title = {{Reduction of embryonic E93 expression as a hypothetical driver of the evolution of insect metamorphosis}},
+url = {https://www.pnas.org/doi/abs/10.1073/pnas.2216640120},
+volume = {120},
+year = {2023}
+}
 @incollection{Mito2022,
 author = {Mito, Taro and Ishimaru, Yoshiyasu and Watanabe, Takahito and Nakamura, Taro and Ylla, Guillem and Noji, Sumihare and Extavour, Cassandra G.},
 doi = {10.1016/bs.ctdb.2022.02.003},
@@ -260,18 +276,5 @@ pmid = {29403074},
 title = {{Hemimetabolous genomes reveal molecular basis of termite eusociality}},
 volume = {2},
 year = {2018}
-}
-@article{Fernandez-Nicolas2022,
-abstract = {The early embryo of the cockroach Blattella germanica exhibits high E93 expression. In general, E93 triggers adult morphogenesis during postembryonic development, but in the cockroach E93 is also crucial in early embryogenesis. Moreover, the embryonic levels of E93 expression are high in hemimetabolan insects, while in holometabolans they are very low. They are also low in Thysanoptera and in Hemiptera Sternorrhyncha with postembryonic quiescent stages, as well as in Odonata, the nymph of which is very different from the adult. In ametabolans, such as the Zygentoma Thermobia domestica, E93 expression levels are very high in the early embryo, whereas during postembryonic development they are medium and relatively constant. Given that embryogenesis of hemimetabolans yields an adultiform nymph, we speculate that E93 plays some sort of adult triggering role in the embryo of these species. We conjecture that the reduction of E93 transcript levels in the embryo has been instrumental in the evolution of insect metamorphosis. The suppression of E93 expression during the nymphal period, and its concentration in the preadult stage, is consubstantial with the emergence of hemimetaboly. As such, attenuation of E93 expression in the embryo could have resulted in a larval genetic program and the emergence of holometaboly. Independent decreases of E93 expression in the embryo of Odonata, Thysanoptera, and different groups of Hemiptera Sternorrhyncha would have allowed the development of modified juvenile stages adapted to specific ecophysiological conditions.},
-author = {Fernandez-Nicolas, Ana and Machaj, Gabriela and Ventos-Alfonso, Alba and Pagone, Viviana and Minemura, Toshinori and Ohde, Takahiro and Daimon, Takaaki and Ylla, Guillem and Belles, Xavier},
-doi = {10.1101/2022.10.04.510826},
-file = {:home/guillem/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Fernandez-Nicolas et al. - 2022 - Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis.pdf:pdf},
-journal = {bioRxiv},
-month = {oct},
-pages = {2022.10.04.510826},
-publisher = {Cold Spring Harbor Laboratory},
-title = {{Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis}},
-url = {https://www.biorxiv.org/content/10.1101/2022.10.04.510826v1},
-year = {2022}
 }
 
