--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -71,13 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCESSFULLY PARSED Fernandez-Nicolas2023: \" {Reduction of embryonic E93 expression as a hypothetical dri ... \"\n",
       "SUCESSFULLY PARSED Mito2022: \" {Cricket: The third domesticated insect}  \"\n",
       "SUCESSFULLY PARSED Nakamura2022: \" {Genomics and genome editing techniques of crickets, an emer ... \"\n",
       "SUCESSFULLY PARSED Tarikere2021: \" {Distinct gene expression dynamics in germ line and somatic  ... \"\n",
@@ -94,8 +95,7 @@
       "SUCESSFULLY PARSED Ylla2015A: \" {Towards understanding the molecular basis of cockroach terg ... \"\n",
       "SUCESSFULLY PARSED Ylla2021: \" {Insights into the genomic evolution of insects from cricket ... \"\n",
       "SUCESSFULLY PARSED Montanes2021: \" {siRNA enrichment in Argonaute 2-depleted Blattella germanic ... \"\n",
-      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n",
-      "SUCESSFULLY PARSED Fernandez-Nicolas2022: \" {Reduction of embryonic E93 expression as a key factor for t ... \"\n"
+      "SUCESSFULLY PARSED Harrison2018: \" {Hemimetabolous genomes reveal molecular basis of termite eu ... \"\n"
      ]
     }
    ],
@@ -220,16 +220,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' Ana Fernandez-Nicolas,  <b>Gabriela Machaj</b>,  Alba Ventos-Alfonso,  Viviana Pagone,  Toshinori Minemura,  Takahiro Ohde,  Takaaki Daimon,  <b>Guillem Ylla</b>,  Xavier Belles, \"Reduction of embryonic E93 expression as a key factor for the evolution of insect metamorphosis.\" <em>bioRxiv</em>, 2022.'"
+       "' Mark Harrison,  Evelien Jongepier,  Hugh Robertson,  Nicolas Arning,  Tristan Bitard-Feildel,  Hsu Chao,  Christopher Childers,  Huyen Dinh,  Harshavardhan Doddapaneni,  Shannon Dugan,  Johannes Gowin,  Carolin Greiner,  Yi Han,  Haofu Hu,  Daniel Hughes,  Ann Huylmans,  Carsten Kemena,  Lukas Kremer,  Sandra Lee,  Alberto Lopez-Ezquerra,  Ludovic Mallet,  Jose Monroy-Kuhn,  Annabell Moser,  Shwetha Murali,  Donna Muzny,  Saria Otani,  Maria Piulachs,  Monica Poelchau,  Jiaxin Qu,  Florentine Schaub,  Ayako Wada-Katsumata,  Kim Worley,  Qiaolin Xie,  <b>Guillem Ylla</b>,  Michael Poulsen,  Richard Gibbs,  Coby Schal,  Stephen Richards,  Xavier Belles,  Judith Korb,  Erich Bornberg-Bauer, \"Hemimetabolous genomes reveal molecular basis of termite eusociality.\" <em>Nature Ecology and Evolution</em>, 2018.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
