--- a/_posts/2023-02-22-blog-post-4.md
+++ b/_posts/2023-02-22-blog-post-4.md
@@ -13,9 +13,9 @@ Our recent publication in [PNAS about the role of E93 in the embryo as key payer
 In Spain:
 
 
-- [La Vanguardia](www.lavanguardia.com/vida/20230207/8740046/csic-upf-revelan-proteina-e93-determina-metamorfosis-insectos.html)
+- [La Vanguardia](https://www.lavanguardia.com/vida/20230207/8740046/csic-upf-revelan-proteina-e93-determina-metamorfosis-insectos.html)
 
-- [SINC](www.agenciasinc.es/Noticias/La-cantidad-de-una-proteina-en-el-embrion-de-un-insecto-podria-explicar-su-forma-de-nacer)
+- [SINC](https://www.agenciasinc.es/Noticias/La-cantidad-de-una-proteina-en-el-embrion-de-un-insecto-podria-explicar-su-forma-de-nacer)
 
 - [La Sexta](https://www.lasexta.com/tecnologia-tecnoxplora/sinc/cantidad-proteina-embrion-insecto-podria-explicar-forma-nacer_2023020863e375a3308cc00001083fec.html)
 
