--- a/_talks/2022-PCG2022.md
+++ b/_talks/2022-PCG2022.md
@@ -10,4 +10,4 @@ location: "Krakow, Pland"
 
 [More information here](https://kongresgenetyki2022.jordan.pl/)
 
-[Photo4](IMG_0161.JPEG)
+[Photo4](IMG_0161.jpg)
