--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -56,11 +56,14 @@
      "output_type": "stream",
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t2021-09-24\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
-      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t2022-02-22\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs. ![](WBBiB_Winter_School_2022_slide2.jpg)\r\n",
-      "Could E93 play the adult specifier role in the embryo? \tTalk\tice2022\tInternational Congress of Entomology 2022.\t2022-07-20\tHelsinki, Finland\thttps://ice2020helsinki.fi/\t\r\n",
+      "The new FBBB’s Laboratory of Bioinformatics and Genome Biology: computational approaches to study genes, genomes, gene regulatory networks\tTalk\tjubilee\tThe Jubilee Conference of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t24/09/2021\tJagiellonian University, Krakow, Poland\thttps://jubileuszwbbib.confer.uj.edu.pl/en_GB/program/ksiazka-streszczen\t[Photo1](JW210926_356.jpg)[Photo2](JW210926_360.jpg)[Photo3](JW210926_363.jpg)\r\n",
+      "Small RNAs: when the small rule the bigger\tTalk\twinterschool22\tXLIX Winter School of the Faculty of Biochemistry and Biotechnology at the Jagiellonian University.\t22/02/2022\tJagiellonian University, Krakow, Poland\thttps://winterschool.wbbib.uj.edu.pl/en_GB/\tGuillem Ylla gave a talk in the workshop titled “Omics research – from methodology to application” about the role of small RNAs controlling the expression of mRNAs. ![](WBBiB_Winter_School_2022_slide2.jpg)\r\n",
+      "Could E93 play the adult specifier role in the embryo? \tTalk\tice2022\tInternational Congress of Entomology 2022.\t20/07/2022\tHelsinki, Finland\thttps://ice2020helsinki.fi/\t\r\n",
       "Comparative genomics of insects to unveil the evolution of gene regulatory networks.\tTalk\tBibtorun2022\tBioinformatics in Torun conference by the Polish Bioinformatics Society  2022.\t24/06/2022\tTorun, Poland\thttps://www.ptbi.org.pl/website/conferences/bit22/\t\r\n",
-      "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t[Photo4](IMG_0161.JPEG)\r\n"
+      "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t[Photo4](IMG_0161.jpg)\r\n",
+      "Non-traditional insect models are key for understanding the evolution and regulation of insect metamorphosis\tTalk\tNtrAMS\tNon-Traditional Arthropod Model Systems Meeting: Studying Form and Function\t03/08/2023\tBowdoin College, Brunswick, Maine, USA\thttps://www.bowdoin.edu/events/conferences/ntrams-summer-conference.html\t\r\n",
+      "Using bioinformatics to unveil the mysteries of animal evolution.\tTalk\tICG-18\t18th Annual Meeting of the International Conference on Genomics (ICG-18) Youth Symposium\t26/07/2023\tShenzhen, China, July 26h 2023\thttps://icg.bio/en/ICG18index/index.aspx\t\r\n",
+      "Using bioinformatics to unveil the mysteries of animal evolution.\tTalk\tGenomica\t7th Polish Conference of Genetics: “Genomica”\t20/05/2023\tJagiellonian University, Krakow, Poland\thttp://www.genomica.pl/en/home-page/\t\r\n"
      ]
     }
    ],
@@ -81,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -126,7 +129,7 @@
        "      <td>Talk</td>\n",
        "      <td>jubilee</td>\n",
        "      <td>The Jubilee Conference of the Faculty of Bioch...</td>\n",
-       "      <td>2021-09-24</td>\n",
+       "      <td>24/09/2021</td>\n",
        "      <td>Jagiellonian University, Krakow, Poland</td>\n",
        "      <td>https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...</td>\n",
        "      <td>[Photo1](JW210926_356.jpg)[Photo2](JW210926_36...</td>\n",
@@ -137,7 +140,7 @@
        "      <td>Talk</td>\n",
        "      <td>winterschool22</td>\n",
        "      <td>XLIX Winter School of the Faculty of Biochemis...</td>\n",
-       "      <td>2022-02-22</td>\n",
+       "      <td>22/02/2022</td>\n",
        "      <td>Jagiellonian University, Krakow, Poland</td>\n",
        "      <td>https://winterschool.wbbib.uj.edu.pl/en_GB/</td>\n",
        "      <td>Guillem Ylla gave a talk in the workshop title...</td>\n",
@@ -148,7 +151,7 @@
        "      <td>Talk</td>\n",
        "      <td>ice2022</td>\n",
        "      <td>International Congress of Entomology 2022.</td>\n",
-       "      <td>2022-07-20</td>\n",
+       "      <td>20/07/2022</td>\n",
        "      <td>Helsinki, Finland</td>\n",
        "      <td>https://ice2020helsinki.fi/</td>\n",
        "      <td>NaN</td>\n",
@@ -173,7 +176,40 @@
        "      <td>30/06/2022</td>\n",
        "      <td>Krakow, Pland</td>\n",
        "      <td>https://kongresgenetyki2022.jordan.pl/</td>\n",
-       "      <td>[Photo4](IMG_0161.JPEG)</td>\n",
+       "      <td>[Photo4](IMG_0161.jpg)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Non-traditional insect models are key for unde...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>NtrAMS</td>\n",
+       "      <td>Non-Traditional Arthropod Model Systems Meetin...</td>\n",
+       "      <td>03/08/2023</td>\n",
+       "      <td>Bowdoin College, Brunswick, Maine, USA</td>\n",
+       "      <td>https://www.bowdoin.edu/events/conferences/ntr...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Using bioinformatics to unveil the mysteries o...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>ICG-18</td>\n",
+       "      <td>18th Annual Meeting of the International Confe...</td>\n",
+       "      <td>26/07/2023</td>\n",
+       "      <td>Shenzhen, China, July 26h 2023</td>\n",
+       "      <td>https://icg.bio/en/ICG18index/index.aspx</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Using bioinformatics to unveil the mysteries o...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>Genomica</td>\n",
+       "      <td>7th Polish Conference of Genetics: “Genomica”</td>\n",
+       "      <td>20/05/2023</td>\n",
+       "      <td>Jagiellonian University, Krakow, Poland</td>\n",
+       "      <td>http://www.genomica.pl/en/home-page/</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -186,13 +222,19 @@
        "2  Could E93 play the adult specifier role in the...  Talk         ice2022   \n",
        "3  Comparative genomics of insects to unveil the ...  Talk    Bibtorun2022   \n",
        "4  Cricket genomes: unveiling the genomes of futu...  Talk         PCG2022   \n",
+       "5  Non-traditional insect models are key for unde...  Talk          NtrAMS   \n",
+       "6  Using bioinformatics to unveil the mysteries o...  Talk          ICG-18   \n",
+       "7  Using bioinformatics to unveil the mysteries o...  Talk        Genomica   \n",
        "\n",
        "                                               venue        date  \\\n",
-       "0  The Jubilee Conference of the Faculty of Bioch...  2021-09-24   \n",
-       "1  XLIX Winter School of the Faculty of Biochemis...  2022-02-22   \n",
-       "2         International Congress of Entomology 2022.  2022-07-20   \n",
+       "0  The Jubilee Conference of the Faculty of Bioch...  24/09/2021   \n",
+       "1  XLIX Winter School of the Faculty of Biochemis...  22/02/2022   \n",
+       "2         International Congress of Entomology 2022.  20/07/2022   \n",
        "3  Bioinformatics in Torun conference by the Poli...  24/06/2022   \n",
        "4                    6th Polish Congress of Genetics  30/06/2022   \n",
+       "5  Non-Traditional Arthropod Model Systems Meetin...  03/08/2023   \n",
+       "6  18th Annual Meeting of the International Confe...  26/07/2023   \n",
+       "7      7th Polish Conference of Genetics: “Genomica”  20/05/2023   \n",
        "\n",
        "                                  location  \\\n",
        "0  Jagiellonian University, Krakow, Poland   \n",
@@ -200,6 +242,9 @@
        "2                        Helsinki, Finland   \n",
        "3                            Torun, Poland   \n",
        "4                            Krakow, Pland   \n",
+       "5   Bowdoin College, Brunswick, Maine, USA   \n",
+       "6           Shenzhen, China, July 26h 2023   \n",
+       "7  Jagiellonian University, Krakow, Poland   \n",
        "\n",
        "                                            talk_url  \\\n",
        "0  https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...   \n",
@@ -207,16 +252,22 @@
        "2                        https://ice2020helsinki.fi/   \n",
        "3  https://www.ptbi.org.pl/website/conferences/bi...   \n",
        "4             https://kongresgenetyki2022.jordan.pl/   \n",
+       "5  https://www.bowdoin.edu/events/conferences/ntr...   \n",
+       "6           https://icg.bio/en/ICG18index/index.aspx   \n",
+       "7               http://www.genomica.pl/en/home-page/   \n",
        "\n",
        "                                         description  \n",
        "0  [Photo1](JW210926_356.jpg)[Photo2](JW210926_36...  \n",
        "1  Guillem Ylla gave a talk in the workshop title...  \n",
        "2                                                NaN  \n",
        "3                                                NaN  \n",
-       "4                            [Photo4](IMG_0161.JPEG)  "
+       "4                             [Photo4](IMG_0161.jpg)  \n",
+       "5                                                NaN  \n",
+       "6                                                NaN  \n",
+       "7                                                NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -269,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -331,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "outputs_hidden": false
@@ -342,12 +393,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-09-24-jubilee.md\t      JW210926_356.jpg\r\n",
-      "2022-02-22-winterschool22.md  JW210926_360.jpg\r\n",
-      "2022-07-20-ice2022.md\t      JW210926_363.jpg\r\n",
-      "2022-Bibtorun2022.md\t      WBBiB_Winter_School_2022_slide2.jpg\r\n",
-      "2022-PCG2022.md\t\t      YllaLab_Talks.tsv\r\n",
-      "IMG_0161.JPEG\r\n"
+      "2021-jubilee.md\t\t2023-Genomica.md  JW210926_360.jpg\r\n",
+      "2022-Bibtorun2022.md\t2023-ICG-18.md\t  JW210926_363.jpg\r\n",
+      "2022-ice2022.md\t\t2023-NtrAMS.md\t  WBBiB_Winter_School_2022_slide2.jpg\r\n",
+      "2022-PCG2022.md\t\tIMG_0161.jpg\t  YllaLab_Talks.tsv\r\n",
+      "2022-winterschool22.md\tJW210926_356.jpg\r\n"
      ]
     }
    ],
