--- a/markdown_generator/YllaPublications.bib
+++ b/markdown_generator/YllaPublications.bib
@@ -1,3 +1,20 @@
+@article{kulkarni_oskar_2023,
+	title = {oskar acts with the transcription factor {Creb} to regulate long-term memory in crickets},
+	volume = {120},
+	copyright = {All rights reserved},
+	url = {https://www.pnas.org/doi/10.1073/pnas.2218506120},
+	doi = {10.1073/pnas.2218506120},
+	abstract = {Novel genes have the potential to drive the evolution of new biological mechanisms, or to integrate into preexisting regulatory circuits and contribute to the regulation of older, conserved biological functions. One such gene, the novel insect-specific gene oskar, was first identified based on its role in establishing the Drosophila melanogaster germ line. We previously showed that this gene likely arose through an unusual domain transfer event involving bacterial endosymbionts and played a somatic role before evolving its well-known germ line function. Here, we provide empirical support for this hypothesis in the form of evidence for a neural role for oskar. We show that oskar is expressed in the adult neural stem cells of a hemimetabolous insect, the cricket Gryllus bimaculatus. In these stem cells, called neuroblasts, oskar is required together with the ancient animal transcription factor Creb to regulate long-term (but not short-term) olfactory memory. We provide evidence that oskar positively regulates Creb, which plays a conserved role in long-term memory across animals, and that oskar in turn may be a direct target of Creb. Together with previous reports of a role for oskar in nervous system development and function in crickets and flies, our results are consistent with the hypothesis that oskar’s original somatic role may have been in the insect nervous system. Moreover, its colocalization and functional cooperation with the conserved pluripotency gene piwi in the nervous system may have facilitated oskar’s later co-option to the germ line in holometabolous insects.},
+	number = {21},
+	urldate = {2023-06-22},
+	journal = {Proceedings of the National Academy of Sciences},
+	author = {Kulkarni, Arpita and Ewen-Campen, Ben and Terao, Kanta and Matsumoto, Yukihisa and Li, Yaolong and Watanabe, Takayuki and Kao, Jonchee A. and Parhad, Swapnil S. and Ylla, Guillem and Mizunami, Makoto and Extavour, Cassandra G.},
+	month = may,
+	year = {2023},
+	note = {Publisher: Proceedings of the National Academy of Sciences},
+	pages = {e2218506120},
+	file = {Kulkarni et al_2023_oskar acts with the transcription factor Creb to regulate long-term memory in.pdf:/home/guillem/OneDrive/ZoteroPDFs/Kulkarni et al_2023_oskar acts with the transcription factor Creb to regulate long-term memory in.pdf:application/pdf;Kulkarni et al_2023_oskar acts with the transcription factor Creb to regulate long-term memory in.pdf:/home/guillem/OneDrive/ZoteroPDFs/Kulkarni et al_2023_oskar acts with the transcription factor Creb to regulate long-term memory in2.pdf:application/pdf},
+}
 @article{Fernandez-Nicolas2023,
 abstract = {SignificanceInsect metamorphosis is classified into hemimetaboly and holometaboly, which derives from the former. Hemimetabolan nymphs are similar to the adult, whereas in holometabolans embryogene...},
 author = {Fernandez-Nicolas, Ana and Machaj, Gabriela and Ventos-Alfonso, Alba and Pagone, Viviana and Minemura, Toshinori and Ohde, Takahiro and Daimon, Takaaki and Ylla, Guillem and Belles, Xavier},
