--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -63,7 +63,9 @@
       "Cricket genomes: unveiling the genomes of future food.\tTalk\tPCG2022\t6th Polish Congress of Genetics\t30/06/2022\tKrakow, Pland\thttps://kongresgenetyki2022.jordan.pl/\t[Photo4](IMG_0161.jpg)\r\n",
       "Non-traditional insect models are key for understanding the evolution and regulation of insect metamorphosis\tTalk\tNtrAMS\tNon-Traditional Arthropod Model Systems Meeting: Studying Form and Function\t03/08/2023\tBowdoin College, Brunswick, Maine, USA\thttps://www.bowdoin.edu/events/conferences/ntrams-summer-conference.html\t\r\n",
       "Using bioinformatics to unveil the mysteries of animal evolution.\tTalk\tICG-18\t18th Annual Meeting of the International Conference on Genomics (ICG-18) Youth Symposium\t26/07/2023\tShenzhen, China, July 26h 2023\thttps://icg.bio/en/ICG18index/index.aspx\t\r\n",
-      "Using bioinformatics to unveil the mysteries of animal evolution.\tTalk\tGenomica\t7th Polish Conference of Genetics: “Genomica”\t20/05/2023\tJagiellonian University, Krakow, Poland\thttp://www.genomica.pl/en/home-page/\t\r\n"
+      "Using bioinformatics to unveil the mysteries of animal evolution.\tTalk\tGenomica\t7th Polish Conference of Genetics: “Genomica”\t20/05/2023\tJagiellonian University, Krakow, Poland\thttp://www.genomica.pl/en/home-page/\t\r\n",
+      "A novel bioinformatics tool to annotate and analyze piRNAs.\tTalk\tPTBI2023\tSymposium of the Polish Bioinformatics Society\t13/09/2023\tGliwice, Poland\thttps://www.ptbi.org.pl/website/conferences/ptbi2023/\t\r\n",
+      "The transcriptomics of the evolution of insect metamorphosis.\tTalk\tRNABio2023\tPolish RNA Biology Meeting\t28/09/2023\tWarsaw, Poland\tInternational Institute of Molecular and Cell Biology in Warsaw\t\r\n"
      ]
     }
    ],
@@ -211,6 +213,28 @@
        "      <td>http://www.genomica.pl/en/home-page/</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A novel bioinformatics tool to annotate and an...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>PTBI2023</td>\n",
+       "      <td>Symposium of the Polish Bioinformatics Society</td>\n",
+       "      <td>13/09/2023</td>\n",
+       "      <td>Gliwice, Poland</td>\n",
+       "      <td>https://www.ptbi.org.pl/website/conferences/pt...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>The transcriptomics of the evolution of insect...</td>\n",
+       "      <td>Talk</td>\n",
+       "      <td>RNABio2023</td>\n",
+       "      <td>Polish RNA Biology Meeting</td>\n",
+       "      <td>28/09/2023</td>\n",
+       "      <td>Warsaw, Poland</td>\n",
+       "      <td>International Institute of Molecular and Cell ...</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -225,6 +249,8 @@
        "5  Non-traditional insect models are key for unde...  Talk          NtrAMS   \n",
        "6  Using bioinformatics to unveil the mysteries o...  Talk          ICG-18   \n",
        "7  Using bioinformatics to unveil the mysteries o...  Talk        Genomica   \n",
+       "8  A novel bioinformatics tool to annotate and an...  Talk        PTBI2023   \n",
+       "9  The transcriptomics of the evolution of insect...  Talk      RNABio2023   \n",
        "\n",
        "                                               venue        date  \\\n",
        "0  The Jubilee Conference of the Faculty of Bioch...  24/09/2021   \n",
@@ -235,6 +261,8 @@
        "5  Non-Traditional Arthropod Model Systems Meetin...  03/08/2023   \n",
        "6  18th Annual Meeting of the International Confe...  26/07/2023   \n",
        "7      7th Polish Conference of Genetics: “Genomica”  20/05/2023   \n",
+       "8     Symposium of the Polish Bioinformatics Society  13/09/2023   \n",
+       "9                         Polish RNA Biology Meeting  28/09/2023   \n",
        "\n",
        "                                  location  \\\n",
        "0  Jagiellonian University, Krakow, Poland   \n",
@@ -245,6 +273,8 @@
        "5   Bowdoin College, Brunswick, Maine, USA   \n",
        "6           Shenzhen, China, July 26h 2023   \n",
        "7  Jagiellonian University, Krakow, Poland   \n",
+       "8                          Gliwice, Poland   \n",
+       "9                           Warsaw, Poland   \n",
        "\n",
        "                                            talk_url  \\\n",
        "0  https://jubileuszwbbib.confer.uj.edu.pl/en_GB/...   \n",
@@ -255,6 +285,8 @@
        "5  https://www.bowdoin.edu/events/conferences/ntr...   \n",
        "6           https://icg.bio/en/ICG18index/index.aspx   \n",
        "7               http://www.genomica.pl/en/home-page/   \n",
+       "8  https://www.ptbi.org.pl/website/conferences/pt...   \n",
+       "9  International Institute of Molecular and Cell ...   \n",
        "\n",
        "                                         description  \n",
        "0  [Photo1](JW210926_356.jpg)[Photo2](JW210926_36...  \n",
@@ -264,7 +296,9 @@
        "4                             [Photo4](IMG_0161.jpg)  \n",
        "5                                                NaN  \n",
        "6                                                NaN  \n",
-       "7                                                NaN  "
+       "7                                                NaN  \n",
+       "8                                                NaN  \n",
+       "9                                                NaN  "
       ]
      },
      "execution_count": 3,
@@ -393,11 +427,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-jubilee.md\t\t2023-Genomica.md  JW210926_360.jpg\r\n",
-      "2022-Bibtorun2022.md\t2023-ICG-18.md\t  JW210926_363.jpg\r\n",
-      "2022-ice2022.md\t\t2023-NtrAMS.md\t  WBBiB_Winter_School_2022_slide2.jpg\r\n",
-      "2022-PCG2022.md\t\tIMG_0161.jpg\t  YllaLab_Talks.tsv\r\n",
-      "2022-winterschool22.md\tJW210926_356.jpg\r\n"
+      "2021-jubilee.md\t\t2023-ICG-18.md\t    JW210926_360.jpg\r\n",
+      "2022-Bibtorun2022.md\t2023-NtrAMS.md\t    JW210926_363.jpg\r\n",
+      "2022-ice2022.md\t\t2023-PTBI2023.md    WBBiB_Winter_School_2022_slide2.jpg\r\n",
+      "2022-PCG2022.md\t\t2023-RNABio2023.md  YllaLab_Talks.tsv\r\n",
+      "2022-winterschool22.md\tIMG_0161.jpg\r\n",
+      "2023-Genomica.md\tJW210926_356.jpg\r\n"
      ]
     }
    ],
