--- a/markdown_generator/PubsFromBib.ipynb
+++ b/markdown_generator/PubsFromBib.ipynb
@@ -78,6 +78,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SUCESSFULLY PARSED kulkarni_oskar_2023: \" oskar acts with the transcription factor {Creb} to regulate  ... \"\n",
       "SUCESSFULLY PARSED Fernandez-Nicolas2023: \" {Reduction of embryonic E93 expression as a hypothetical dri ... \"\n",
       "SUCESSFULLY PARSED Mito2022: \" {Cricket: The third domesticated insect}  \"\n",
       "SUCESSFULLY PARSED Nakamura2022: \" {Genomics and genome editing techniques of crickets, an emer ... \"\n",
